--- a/api/src/main/resources/reports/doarSummary.jrxml
+++ b/api/src/main/resources/reports/doarSummary.jrxml
@@ -158,6 +158,10 @@
 			<property name="net.sf.jasperreports.json.field.expression" value="csf"/>
 			<fieldDescription><![CDATA[csf]]></fieldDescription>
 		</field>
+		<field name="reportTitle" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="reportTitle"/>
+			<fieldDescription><![CDATA[reportTitle]]></fieldDescription>
+		</field>
 	</subDataset>
 	<subDataset name="StudentSet" uuid="fc83fa88-cf32-4b1d-b6e2-f7c12e0e4ee0">
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="studentsInSessionByAssessment"/>
@@ -466,6 +470,10 @@
 		<property name="net.sf.jasperreports.jsonql.field.expression" value="reportId"/>
 		<fieldDescription><![CDATA[reportId]]></fieldDescription>
 	</field>
+	<field name="reportTitle" class="java.lang.String">
+		<property name="net.sf.jasperreports.json.field.expression" value="reportTitle"/>
+		<fieldDescription><![CDATA[reportTitle]]></fieldDescription>
+	</field>
 	<field name="csf" class="java.lang.Boolean">
 		<property name="net.sf.jasperreports.json.field.expression" value="csf"/>
 		<fieldDescription><![CDATA[csf]]></fieldDescription>
@@ -737,22 +745,40 @@
 					</jr:table>
 				</componentElement>
 				<textField>
-					<reportElement x="180" y="20" width="400" height="20" forecolor="#003366" uuid="f1952c66-e7ae-453a-a01e-c08e09a4bdef">
-						<printWhenExpression><![CDATA[!$F{csf}]]></printWhenExpression>
+					<reportElement x="70" y="20" width="620" height="20" forecolor="#003366" uuid="f1952c66-e7ae-453a-a01e-c08e09a4bdef">
+						<printWhenExpression><![CDATA[!$F{csf} && $F{assessmentType} != null && ($F{assessmentType}.equals("LTP12") || $F{assessmentType}.equals("LTP10") || $F{assessmentType}.equals("LTF12"))]]></printWhenExpression>
 					</reportElement>
 					<textElement>
 						<font fontName="BCSans"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Distribution of Assessment Results Summary - " + $F{assessmentType}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Distribution of Assessment Results Summary - " + $F{reportTitle}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="180" y="20" width="400" height="20" forecolor="#003366" uuid="f1952c66-e7ae-453a-a01e-c08e09a4bdef">
-						<printWhenExpression><![CDATA[$F{csf}]]></printWhenExpression>
+					<reportElement x="150" y="20" width="620" height="20" forecolor="#003366" uuid="f1952c66-e7ae-453a-a01e-c08e09a4bdef">
+						<printWhenExpression><![CDATA[!$F{csf} && $F{assessmentType} != null && ($F{assessmentType}.equals("LTE12") || $F{assessmentType}.equals("LTE10") || $F{assessmentType}.equals("NME10") || $F{assessmentType}.equals("NMF10"))]]></printWhenExpression>
 					</reportElement>
 					<textElement>
 						<font fontName="BCSans"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Récapitulatif de la distribution des résultats - " + $F{assessmentType}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Distribution of Assessment Results Summary - " + $F{reportTitle}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="70" y="20" width="620" height="20" forecolor="#003366" uuid="f1952c66-e7ae-453a-a01e-c08e09a4bdef">
+						<printWhenExpression><![CDATA[$F{csf} && $F{assessmentType} != null && ($F{assessmentType}.equals("LTP12") || $F{assessmentType}.equals("LTP10") || $F{assessmentType}.equals("LTF12"))]]></printWhenExpression>
+					</reportElement>
+					<textElement>
+						<font fontName="BCSans"/>
+					</textElement>
+					<textFieldExpression><![CDATA["Récapitulatif de la distribution des résultats - " + $F{reportTitle}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="150" y="20" width="620" height="20" forecolor="#003366" uuid="f1952c66-e7ae-453a-a01e-c08e09a4bdef">
+						<printWhenExpression><![CDATA[$F{csf} && $F{assessmentType} != null && ($F{assessmentType}.equals("LTE12") || $F{assessmentType}.equals("LTE10") || $F{assessmentType}.equals("NME10") || $F{assessmentType}.equals("NMF10"))]]></printWhenExpression>
+					</reportElement>
+					<textElement>
+						<font fontName="BCSans"/>
+					</textElement>
+					<textFieldExpression><![CDATA["Récapitulatif de la distribution des résultats - " + $F{reportTitle}]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement x="30" y="80" width="193" height="20" uuid="0903abd2-bec6-482f-8a37-888bb0be12ef">
@@ -1784,7 +1810,7 @@
 					<text><![CDATA[Communicate %]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="320" y="500" width="100" height="20" uuid="433c6497-6639-4d0c-9122-a5ee6503000b">
+					<reportElement x="320" y="500" width="120" height="20" uuid="433c6497-6639-4d0c-9122-a5ee6503000b">
 						<printWhenExpression><![CDATA[$F{assessmentType} != null && ($F{assessmentType}.equals("LTP10") || $F{assessmentType}.equals("LTP12") || $F{assessmentType}.equals("LTF12"))]]></printWhenExpression>
 					</reportElement>
 					<textElement>
@@ -2133,7 +2159,7 @@
 											<font fontName="BCSans" size="7"/>
 											<paragraph leftIndent="5"/>
 										</textElement>
-										<text><![CDATA[Partie B Communication écrite creative]]></text>
+										<text><![CDATA[Partie B Communication écrite créative]]></text>
 									</staticText>
 								</jr:columnHeader>
 								<jr:detailCell height="20">
@@ -2501,7 +2527,7 @@
 					<text><![CDATA[Cognitive Level %]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="320" y="640" width="100" height="20" uuid="433c6497-6639-4d0c-9122-a5ee6503000b">
+					<reportElement x="320" y="640" width="120" height="20" uuid="433c6497-6639-4d0c-9122-a5ee6503000b">
 						<printWhenExpression><![CDATA[$F{assessmentType} != null && ($F{assessmentType}.equals("LTP10") || $F{assessmentType}.equals("LTP12") || $F{assessmentType}.equals("LTF12"))]]></printWhenExpression>
 					</reportElement>
 					<textElement>
